--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "bloopy"
 version = "0.1.0"
 edition = "2021"
+include = ["Cargo.toml", "src/**", "assets/**"]
 
 [dependencies]
 crossterm = "0.27"
